restructuring EM module

--- a/lifev/em/CMakeLists.txt
+++ b/lifev/em/CMakeLists.txt
@@ -25,8 +25,8 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
 ADD_SUBDIRECTORY(solver)
-SET(HEADERS ${HEADERS} ${solver_HEADERS})
-SET(SOURCES ${SOURCES} ${solver_SOURCES})
+SET(HEADERS ${HEADERS} ${solver_HEADERS} ${solver_electrophysiology_HEADERS} ${solver_mechanics_HEADERS})
+SET(SOURCES ${SOURCES} ${solver_SOURCES} ${solver_electrophysiology_SOURCES} ${solver_mechanics_SOURCES})
 
 ADD_SUBDIRECTORY(util)
 SET(HEADERS ${HEADERS} ${util_HEADERS})
