--- a/lifev/em/solver/mechanics/CMakeLists.txt
+++ b/lifev/em/solver/mechanics/CMakeLists.txt
@@ -1,15 +1,23 @@
+ADD_SUBDIRECTORY(materials)
+
 SET( solver_mechanics_HEADERS
-CACHE INTERNAL "")
+ solver/mechanics/EMStructuralConstitutiveLaw.hpp
+ solver/mechanics/EMstructuralOperator.hpp
+ solver/mechanics/EMMechanicalExpressions.hpp
+ solver/mechanics/EMElasticityFunctions.hpp
+ solver/mechanics/EMETAJacobianAssembler.hpp
+ solver/mechanics/EMETAResidualAssembler.hpp
+ CACHE INTERNAL "")
 
 
 SET(LOCAL_HEADERS)
-FOREACH(INC ${solver_IonicModels_HEADERS})
+FOREACH(INC ${solver_mechanics_HEADERS})
   STRING(REPLACE "solver/mechanics/" "" LOCAL_INC ${INC})
   SET(LOCAL_HEADERS ${LOCAL_HEADERS} ${LOCAL_INC})
 ENDFOREACH()
 
 INSTALL(
   FILES ${LOCAL_HEADERS}
-  DESTINATION "${${PROJECT_NAME}_INSTALL_INCLUDE_DIR}/lifev/em/solver/mechanics/"
+  DESTINATION "${${PROJECT_NAME}_INSTALL_INCLUDE_DIR}/lifev/em/solver/mechanics"
   COMPONENT ${PACKAGE_NAME}
 )
