Updates in the electrophysiology in em

--- a/lifev/em/solver/electrophysiology/CMakeLists.txt
+++ b/lifev/em/solver/electrophysiology/CMakeLists.txt
@@ -1,3 +1,5 @@
+ADD_SUBDIRECTORY(IonicModels)
+
 SET( solver_electrophysiology_HEADERS
 	solver/electrophysiology/EMMonodomainSolver.hpp
 CACHE INTERNAL "")
