--- a/lifev/em/testsuite/CMakeLists.txt
+++ b/lifev/em/testsuite/CMakeLists.txt
@@ -6,4 +6,7 @@ ADD_SUBDIRECTORIES(
 #  EMCell
 #  EMVentricle
 #  EMMyocyte
+	test_passiveEMMaterial
+	test_OneWayCoupling
+	test_fixedMonodomain
 )
