--- a/lifev/em/solver/mechanics/materials/functions/CMakeLists.txt
+++ b/lifev/em/solver/mechanics/materials/functions/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET( solver_mechanics_materials_functions_HEADERS
  solver/mechanics/materials/functions/EMMaterialFunctions.hpp
+# solver/mechanics/materials/functions/FunctionsAnisotropicExponential.hpp
  solver/mechanics/materials/functions/FunctionsIsotropicExponential.hpp
  solver/mechanics/materials/functions/FunctionsLinearizedNeoHookean.hpp
  solver/mechanics/materials/functions/FunctionsList.hpp
