--- a/lifev/em/examples/example_laplacian/CMakeLists.txt
+++ b/lifev/em/examples/example_laplacian/CMakeLists.txt
@@ -6,7 +6,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
 
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
-  examplelaplacian
+  example_laplacian
   SOURCES main.cpp
   )
 
@@ -15,8 +15,8 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
 
-# TRIBITS_COPY_FILES_TO_BINARY_DIR(cartesian_cube8.mesh
-#   SOURCE_FILES cartesian_cube8.mesh
-#   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/darcy/data/mesh/inria
-# )
+TRIBITS_COPY_FILES_TO_BINARY_DIR(cartesian_cube4.mesh
+   SOURCE_FILES cube4.mesh
+   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/data/mesh/
+ )
 
