make the last folder created visible

--- a/lifev/structure/examples/CMakeLists.txt
+++ b/lifev/structure/examples/CMakeLists.txt
@@ -5,6 +5,7 @@ INCLUDE(AddSubdirectories)
 ADD_SUBDIRECTORIES(
   basicExample
   example_InflationExtension
+  example_applyForcingTermOnDeformedConfiguration/
   example_CookMembrane
   example_creatingDamagedZone
   example_tractionWithSymmetry
