--- a/lifev/em/testsuite/test_benchmarkBar/CMakeLists.txt
+++ b/lifev/em/testsuite/test_benchmarkBar/CMakeLists.txt
@@ -13,6 +13,7 @@ TRIBITS_ADD_EXECUTABLE(
  TRIBITS_COPY_FILES_TO_BINARY_DIR(datatest_benchmarkBar
    SOURCE_FILES ParamList.xml data
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
+   CREATE_SYMLINK
  )
 
 TRIBITS_COPY_FILES_TO_BINARY_DIR(cube4_benchmarkBar
