Added cofactor in ETA

--- a/lifev/eta/array/CMakeLists.txt
+++ b/lifev/eta/array/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(array_HEADERS
   array/ETMatrixElemental.hpp
   array/ETVectorElemental.hpp
   array/OperationSmallAddition.hpp
+  array/OperationSmallCofactor.hpp
   array/OperationSmallDivision.hpp
   array/OperationSmallDot.hpp
   array/OperationSmallEmult.hpp
