--- a/lifev/em/solver/mechanics/CMakeLists.txt
+++ b/lifev/em/solver/mechanics/CMakeLists.txt
@@ -5,9 +5,11 @@ SET( solver_mechanics_HEADERS
  solver/mechanics/EMStructuralOperator.hpp
  solver/mechanics/EMMechanicalExpressions.hpp
  solver/mechanics/EMElasticityFunctions.hpp
+ solver/mechanics/EMETAActiveStrainJacobianAssembler.hpp
  solver/mechanics/EMETAJacobianAssembler.hpp
  solver/mechanics/EMETAJacobianIsotropicAssembler.hpp
  solver/mechanics/EMETAResidualAssembler.hpp
+ solver/mechanics/EMETAActiveStrainResidualAssembler.hpp
  solver/mechanics/EMETAResidualIsotropicAssembler.hpp
  CACHE INTERNAL "")
 
