--- a/lifev/em/solver/mechanics/materials/passive_materials/CMakeLists.txt
+++ b/lifev/em/solver/mechanics/materials/passive_materials/CMakeLists.txt
@@ -6,6 +6,7 @@ SET( solver_mechanics_materials_passive_HEADERS
  solver/mechanics/materials/passive_materials/PassiveLinearizedNeoHookean.hpp
  solver/mechanics/materials/passive_materials/PassiveNeoHookean.hpp
  solver/mechanics/materials/passive_materials/PassiveOrthotropicFung.hpp
+ solver/mechanics/materials/passive_materials/PassiveVolumetric.hpp
 # solver/mechanics/materials/passive_materials/PassiveTransverselyIsotropicFung.hpp
  CACHE INTERNAL "")
 
