--- a/lifev/structure/examples/CMakeLists.txt
+++ b/lifev/structure/examples/CMakeLists.txt
@@ -5,7 +5,7 @@ INCLUDE(AddSubdirectories)
 ADD_SUBDIRECTORIES(
   basicExample
   example_InflationExtension
-  example_applyForcingTermOnDeformedConfiguration/
+#  example_applyForcingTermOnDeformedConfiguration/
   example_CookMembrane
   example_creatingDamagedZone
   example_tractionWithSymmetry
@@ -14,3 +14,8 @@ ADD_SUBDIRECTORIES(
   example_computationNorm
 )
 
+IF(LIVEF_HAS_HDF5)
+ADD_SUBDIRECTORIES(
+  example_applyForcingTermOnDeformedConfiguration/
+)
+ENDIF()
