IonicOharaRudy-model Reduced EMMaterial-example

--- a/lifev/electrophysiology/examples/CMakeLists.txt
+++ b/lifev/electrophysiology/examples/CMakeLists.txt
@@ -3,7 +3,7 @@ INCLUDE(TribitsAddExecutableAndTest)
 INCLUDE(AddSubdirectories)
 
 ADD_SUBDIRECTORIES(
-  example_benchmarkPurkinje
-  example_bidomain
-  example_ECG
+#  example_benchmarkPurkinje
+#  example_bidomain
+#  example_ECG
 )
