--- a/lifev/em/examples/example_EMMaterial2/CMakeLists.txt
+++ b/lifev/em/examples/example_EMMaterial2/CMakeLists.txt
@@ -6,17 +6,17 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
 
 TRIBITS_ADD_EXECUTABLE(
-  material
+  material2
   SOURCES main.cpp
   )
 
- TRIBITS_COPY_FILES_TO_BINARY_DIR(data_basic_example
+ TRIBITS_COPY_FILES_TO_BINARY_DIR(data_basic_example2
    SOURCE_FILES ParamList.xml data
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
 
-# TRIBITS_COPY_FILES_TO_BINARY_DIR(cartesian_cube8.mesh
-#   SOURCE_FILES cartesian_cube8.mesh
-#   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/darcy/data/mesh/inria
-# )
+ TRIBITS_COPY_FILES_TO_BINARY_DIR(cube4.mesh
+   SOURCE_FILES cube4.mesh
+   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/data/mesh
+ )
 
