Example on how to generate fibers in biventricular geometry Further coding in Ohara-Rudy model

--- a/lifev/em/examples/CMakeLists.txt
+++ b/lifev/em/examples/CMakeLists.txt
@@ -19,5 +19,5 @@ ADD_SUBDIRECTORIES(
 #  linearizedGHOventricle
 #  prestress
 	example_EMMaterial
-    example_EMMaterial2
+    example_HeartOharaRudy
 )
