--- a/lifev/em/examples/example_HeartOharaRudy/CMakeLists.txt
+++ b/lifev/em/examples/example_HeartOharaRudy/CMakeLists.txt
@@ -6,11 +6,11 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
 
 TRIBITS_ADD_EXECUTABLE(
-  material2
+  HeartOharaRudy
   SOURCES main.cpp
   )
 
- TRIBITS_COPY_FILES_TO_BINARY_DIR(data_basic_example2
+ TRIBITS_COPY_FILES_TO_BINARY_DIR(data_example_HeartOharaRudy
    SOURCE_FILES ParamList.xml data
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
