New material: Mooney-Rivlin

--- a/lifev/em/examples/CMakeLists.txt
+++ b/lifev/em/examples/CMakeLists.txt
@@ -18,6 +18,8 @@ ADD_SUBDIRECTORIES(
 #  linearizedGHOrotation
 #  linearizedGHOventricle
 #  prestress
-	example_EMMaterial
-    example_HeartOharaRudy
+   example_EMMaterial
+   example_HeartOharaRudy
+   example_passiveEMMaterial
+   example_EMCoupling
 )
