--- a/lifev/em/solver/mechanics/materials/passive_materials/CMakeLists.txt
+++ b/lifev/em/solver/mechanics/materials/passive_materials/CMakeLists.txt
@@ -8,6 +8,8 @@ SET( solver_mechanics_materials_passive_HEADERS
  solver/mechanics/materials/passive_materials/PassiveOrthotropicFung.hpp
  solver/mechanics/materials/passive_materials/PassiveVolumetric.hpp
 # solver/mechanics/materials/passive_materials/PassiveTransverselyIsotropicFung.hpp
+ solver/mechanics/materials/passive_materials/PassiveMooneyRivlin.hpp
+
  CACHE INTERNAL "")
 
 SET( solver_mechanics_materials_passive_SOURCES
