--- a/lifev/em/CMakeLists.txt
+++ b/lifev/em/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(HEADERS ${HEADERS}
             ${solver_mechanics_materials_passive_HEADERS}
             ${solver_mechanics_materials_activeStress_HEADERS}
             ${solver_activation_HEADERS}
+            ${solver_activation_xBridgeModels_HEADERS}
             ${solver_activation_activeStressModels_HEADERS}
             ${solver_activation_activeStrainModels_HEADERS})
             
@@ -46,6 +47,7 @@ SET(SOURCES ${SOURCES}
             ${solver_mechanics_materials_passive_SOURCES}
             ${solver_mechanics_materials_activeStress_SOURCES}
             ${solver_activation_SOURCES}
+            ${solver_activation_xBridgeModels_SOURCES}
             ${solver_activation_activeStressModels_SOURCES}
             ${solver_activation_activeStrainModels_SOURCES}
             )
