--- a/lifev/em/examples/example_EMCoupling/CMakeLists.txt
+++ b/lifev/em/examples/example_EMCoupling/CMakeLists.txt
@@ -3,15 +3,15 @@ INCLUDE(TribitsAddExecutableAndTest)
 INCLUDE(TribitsCopyFilesToBinaryDir)
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
-
+INCLUDE_DIRECTORIES(/usr/local/Cellar/eigen/3.2.4/include/eigen3)
 
 TRIBITS_ADD_EXECUTABLE(
   EMCoupling
-  SOURCES main.cpp Circulation.h
+  SOURCES main.cpp
   )
 
  TRIBITS_COPY_FILES_TO_BINARY_DIR(data_example_EMCoupling
-   SOURCE_FILES ParamList.xml data FiberDirectionP1.h5 FiberDirectionP2.h5
+   SOURCE_FILES ParamList.xml data dataP1 FiberDirectionP1.h5 FiberDirectionP2.h5
    SheetsDirectionP1.h5 SheetsDirectionP2.h5
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
