--- a/lifev/em/examples/example_EMCoupling/CMakeLists.txt
+++ b/lifev/em/examples/example_EMCoupling/CMakeLists.txt
@@ -11,12 +11,6 @@ TRIBITS_ADD_EXECUTABLE(
   )
 
  TRIBITS_COPY_FILES_TO_BINARY_DIR(data_example_EMCoupling
-   SOURCE_FILES ParamList.xml data dataP1 FiberDirectionP1.h5 FiberDirectionP2.h5
-   SheetsDirectionP1.h5 SheetsDirectionP2.h5
+   SOURCE_FILES ParamList.xml dataP1BiVent dataP2BiVent dataP1SiVent singleVentricle.mesh FiberDirection.h5  SheetsDirection.h5
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
-
-# TRIBITS_COPY_FILES_TO_BINARY_DIR(cube4.mesh
-#   SOURCE_FILES cube4.mesh
-#   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/data/mesh
-# )
