--- a/lifev/em/examples/example_EMBiVent/CMakeLists.txt
+++ b/lifev/em/examples/example_EMBiVent/CMakeLists.txt
@@ -27,7 +27,19 @@ TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentCoarse
 )
 
 TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentFine
-CREATE_SYMLINK
-SOURCE_FILES biVentFine
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent/
+   CREATE_SYMLINK
+   SOURCE_FILES biVentFine
+   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent/
+)
+
+TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentCoarseP2
+   CREATE_SYMLINK
+   SOURCE_FILES biVentCoarseP2
+   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent/
+)
+
+TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentMediumP2
+   CREATE_SYMLINK
+   SOURCE_FILES biVentMediumP2
+   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent/
 )
