--- a/lifev/em/solver/mechanics/materials/passive_materials/CMakeLists.txt
+++ b/lifev/em/solver/mechanics/materials/passive_materials/CMakeLists.txt
@@ -9,6 +9,7 @@ SET( solver_mechanics_materials_passive_HEADERS
  solver/mechanics/materials/passive_materials/PassiveVolumetric.hpp
 # solver/mechanics/materials/passive_materials/PassiveTransverselyIsotropicFung.hpp
  solver/mechanics/materials/passive_materials/PassiveMooneyRivlin.hpp
+ solver/mechanics/materials/passive_materials/PassiveMooneyRivlinCompact.hpp
 
  CACHE INTERNAL "")
 
