--- a/lifev/em/examples/example_EMBiVent/CMakeLists.txt
+++ b/lifev/em/examples/example_EMBiVent/CMakeLists.txt
@@ -20,10 +20,16 @@ TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentMedium
   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent
 )
 
-TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentCoarse
+TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentCoarseNew
   CREATE_SYMLINK
-  SOURCE_FILES biVentCoarse
+  SOURCE_FILES biVentCoarseNew
   SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent
+)
+
+TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentCoarse
+CREATE_SYMLINK
+SOURCE_FILES biVentCoarse
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent
 )
 
 TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentFine
