debug version compiled

--- a/lifev/em/testsuite/CMakeLists.txt
+++ b/lifev/em/testsuite/CMakeLists.txt
@@ -6,13 +6,13 @@ ADD_SUBDIRECTORIES(
 #  EMCell
 #  EMVentricle
 #  EMMyocyte
-	test_passiveEMMaterial
-	test_activeNeoHook
-	test_OneWayCoupling
-	test_fixedMonodomain
-	test_benchmarkBar	
-	test_benchmarkStaticActiveStress
-	test_benchmarkIsotropicVentricle
-	test_HDF5toVTK
+#	test_passiveEMMaterial
+#	test_activeNeoHook
+#	test_OneWayCoupling
+#	test_fixedMonodomain
+#	test_benchmarkBar	
+#	test_benchmarkStaticActiveStress
+#	test_benchmarkIsotropicVentricle
+#	test_HDF5toVTK
 	test_EMSolver
 )
