--- a/lifev/structure/examples/CMakeLists.txt
+++ b/lifev/structure/examples/CMakeLists.txt
@@ -9,7 +9,7 @@ ADD_SUBDIRECTORIES(
   example_CookMembrane
   example_creatingDamagedZone
   example_tractionWithSymmetry
-  example_principalTensionsInflationExtensions
+#  example_principalTensionsInflationExtensions
   example_partitionMesh
   example_computationNorm
 )
