--- a/lifev/em/examples/example_EMBiVent/CMakeLists.txt
+++ b/lifev/em/examples/example_EMBiVent/CMakeLists.txt
@@ -44,6 +44,12 @@ SOURCE_FILES biVentCoarsePatchesP2
 SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent
 )
 
+TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVCoa
+CREATE_SYMLINK
+SOURCE_FILES heartVCoa
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent
+)
+
 TRIBITS_COPY_FILES_TO_BINARY_DIR(biVentCoarsePatches
 CREATE_SYMLINK
 SOURCE_FILES biVentCoarsePatches
