--- a/lifev/em/examples/example_EMHeart/CMakeLists.txt
+++ b/lifev/em/examples/example_EMHeart/CMakeLists.txt
@@ -17,5 +17,11 @@ TRIBITS_ADD_EXECUTABLE(
 TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVCoa
 CREATE_SYMLINK
 SOURCE_FILES heartVCoa
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMBiVent
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
+)
+
+TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVVCoa
+CREATE_SYMLINK
+SOURCE_FILES heartVVCoa
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
 )
