--- a/lifev/em/examples/example_EMHeart/CMakeLists.txt
+++ b/lifev/em/examples/example_EMHeart/CMakeLists.txt
@@ -25,3 +25,9 @@ CREATE_SYMLINK
 SOURCE_FILES heartVVCoa
 SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
 )
+
+TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVVVCoa
+CREATE_SYMLINK
+SOURCE_FILES heartVVVCoa
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
+)
