--- a/lifev/electrophysiology/testsuite/test_fibersHeart/CMakeLists.txt
+++ b/lifev/electrophysiology/testsuite/test_fibersHeart/CMakeLists.txt
@@ -12,7 +12,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
 )
 
 TRIBITS_COPY_FILES_TO_BINARY_DIR(data_heart_test_fibers_data
-  SOURCE_FILES dataSingleVentricle dataXVentSingle dataSingleVentConv singleVentricle.mesh xVentSingle.mesh biVentCoarse.mesh biVentCoarsePatches.mesh biVentMediumPatches.mesh biVentMedium.mesh biVentFine.mesh singleVentConv.mesh siVent.mesh heartVCoa.mesh heartVVCoa.mesh heartMed.mesh
+  SOURCE_FILES dataSingleVentricle dataXVentSingle dataSingleVentConv singleVentricle.mesh xVentSingle.mesh biVentCoarse.mesh biVentCoarsePatches.mesh biVentMediumPatches.mesh biVentMedium.mesh biVentFine.mesh singleVentConv.mesh siVent.mesh heartVCoa.mesh heartVVCoa.mesh heartVVVCoa.mesh heartMed.mesh
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
