cervin lifev update

--- a/lifev/electrophysiology/testsuite/test_fibersHeart/CMakeLists.txt
+++ b/lifev/electrophysiology/testsuite/test_fibersHeart/CMakeLists.txt
@@ -12,7 +12,12 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
 )
 
 TRIBITS_COPY_FILES_TO_BINARY_DIR(data_heart_test_fibers_data
-  SOURCE_FILES dataSingleVentricle dataXVentSingle dataSingleVentConv singleVentricle.mesh xVentSingle.mesh biVentCoarse.mesh biVentCoarsePatches.mesh biVentMediumPatches.mesh biVentMedium.mesh biVentFine.mesh singleVentConv.mesh siVent.mesh heartVCoa.mesh heartVVCoa.mesh heartVVVCoa.mesh heartMed.mesh
+  SOURCE_FILES dataSingleVentricle dataXVentSingle dataSingleVentConv
+  singleVentricle.mesh xVentSingle.mesh biVentCoarse.mesh
+  biVentCoarsePatches.mesh biVentMediumPatches.mesh biVentMedium.mesh
+  biVentFine.mesh singleVentConv.mesh siVent.mesh heartVCoa.mesh
+  heartVVCoa.mesh heartVVVCoa.mesh heartMed.mesh heartVVCoaPatch.mesh
+  heartVCoaPatch.mesh
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
@@ -31,6 +36,12 @@ TRIBITS_COPY_FILES_TO_BINARY_DIR(dataBiVent
 TRIBITS_COPY_FILES_TO_BINARY_DIR(dataHeart
 CREATE_SYMLINK
 SOURCE_FILES dataHeart
+SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+TRIBITS_COPY_FILES_TO_BINARY_DIR(dataHeartPatch
+CREATE_SYMLINK
+SOURCE_FILES dataHeartPatch
 SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
