--- a/lifev/structure/examples/CMakeLists.txt
+++ b/lifev/structure/examples/CMakeLists.txt
@@ -3,19 +3,19 @@ INCLUDE(TribitsAddExecutableAndTest)
 INCLUDE(AddSubdirectories)
 
 ADD_SUBDIRECTORIES(
-  basicExample
-  example_InflationExtension
+  #basicExample
+  #example_InflationExtension
 #  example_applyForcingTermOnDeformedConfiguration/
-  example_CookMembrane
-  example_creatingDamagedZone
-  example_tractionWithSymmetry
+  #example_CookMembrane
+  #example_creatingDamagedZone
+  #example_tractionWithSymmetry
 #  example_principalTensionsInflationExtensions
-  example_partitionMesh
-  example_computationNorm
+  #example_partitionMesh
+ # example_computationNorm
 )
 
 IF(LIVEF_HAS_HDF5)
 ADD_SUBDIRECTORIES(
-  example_applyForcingTermOnDeformedConfiguration/
+  #example_applyForcingTermOnDeformedConfiguration/
 )
 ENDIF()
