euler lifev update

--- a/lifev/em/examples/example_EMHeart/CMakeLists.txt
+++ b/lifev/em/examples/example_EMHeart/CMakeLists.txt
@@ -10,7 +10,7 @@ TRIBITS_ADD_EXECUTABLE(
   )
 
  TRIBITS_COPY_FILES_TO_BINARY_DIR(data_example_EMHeart
-   SOURCE_FILES ParamList.xml ParamListE.xml data circulation circulationEquil
+   SOURCE_FILES ParamList.xml ParamListE.xml data circulation circulationOld
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
 
