cervin lifev update

--- a/lifev/em/examples/example_EMHeart/CMakeLists.txt
+++ b/lifev/em/examples/example_EMHeart/CMakeLists.txt
@@ -14,6 +14,18 @@ TRIBITS_ADD_EXECUTABLE(
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
 
+TRIBITS_COPY_FILES_TO_BINARY_DIR(heartCoaTr
+CREATE_SYMLINK
+SOURCE_FILES heartCoaTr
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
+)
+
+TRIBITS_COPY_FILES_TO_BINARY_DIR(heartMedTr
+CREATE_SYMLINK
+SOURCE_FILES heartMedTr
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
+)
+
 TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVCoa
 CREATE_SYMLINK
 SOURCE_FILES heartVCoa
