cervin lifev update

--- a/lifev/em/examples/example_EMHeart/CMakeLists.txt
+++ b/lifev/em/examples/example_EMHeart/CMakeLists.txt
@@ -14,44 +14,8 @@ TRIBITS_ADD_EXECUTABLE(
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
  )
 
-TRIBITS_COPY_FILES_TO_BINARY_DIR(heartCoaTr
+TRIBITS_COPY_FILES_TO_BINARY_DIR(mesh
 CREATE_SYMLINK
-SOURCE_FILES heartCoaTr
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
-)
-
-TRIBITS_COPY_FILES_TO_BINARY_DIR(heartMedTr
-CREATE_SYMLINK
-SOURCE_FILES heartMedTr
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
-)
-
-TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVCoa
-CREATE_SYMLINK
-SOURCE_FILES heartVCoa
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
-)
-
-TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVVCoa
-CREATE_SYMLINK
-SOURCE_FILES heartVVCoa
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
-)
-
-TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVVVCoa
-CREATE_SYMLINK
-SOURCE_FILES heartVVVCoa
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
-)
-
-TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVCoaPatch
-CREATE_SYMLINK
-SOURCE_FILES heartVCoaPatch
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
-)
-
-TRIBITS_COPY_FILES_TO_BINARY_DIR(heartVVCoaPatch
-CREATE_SYMLINK
-SOURCE_FILES heartVVCoaPatch
-SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/examples/example_EMHeart
+SOURCE_FILES mesh
+SOURCE_DIR ${CMAKE_SOURCE_DIR}/lifev/em/data
 )
