cervin lifev update

--- a/lifev/em/examples/CMakeLists.txt
+++ b/lifev/em/examples/CMakeLists.txt
@@ -18,7 +18,7 @@ ADD_SUBDIRECTORIES(
 #  linearizedGHOrotation
 #  linearizedGHOventricle
 #  prestress
-#  example_EMMaterial
+  example_EMMaterial
 #  example_HeartOharaRudy
 #  example_passiveEMMaterial
 #  example_EMCoupling
